Added modificator header__lang-link_active and changed index.html and index.css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <path d="M172.212 41.0004H176.575V27.9095H170.439C166.663 27.9095 164.277 29.8186 164.303 32.4777C164.286 33.9692 165.18 35.205 166.749 35.9379L164.166 41.0004H168.496L170.703 36.6709H172.212V41.0004ZM172.212 33.8414H170.541C169.288 33.8414 168.709 33.2277 168.734 32.6482C168.709 32.1027 169.254 31.4209 170.439 31.4209H172.212V33.8414Z" fill="white"/>
         </svg>
         <ul class="header__lang-links">
-          <li><a class="header__lang-link" href="#">Ru</a></li>
+          <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
           <li><a class="header__lang-link" href="#">En</a></li>
         </ul>
       </header>
@@ -88,7 +88,7 @@
               <h3 class="place__url-heading">url</h3>
             </li>
             <li>
-              <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+              <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
             </li>
           </ul>
           <div class="place__paragraphs">
@@ -113,7 +113,7 @@
               <h3 class="place__url-heading">url</h3>
             </li>
             <li>
-              <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+              <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
             </li>
           </ul>
           <div class="place__paragraphs">
@@ -137,7 +137,7 @@
               <h3 class="place__url-heading">url</h3>
             </li>
             <li>
-              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
             </li>
           </ul>
           <div class="place__paragraphs">
@@ -162,7 +162,7 @@
               <h3 class="place__url-heading">url</h3>
             </li>
             <li>
-              <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+              <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
             </li>
           </ul>
           <div class="place__paragraphs">
@@ -186,7 +186,7 @@
               <h3 class="place__url-heading">url</h3>
             </li>
             <li>
-              <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+              <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
             </li>
           </ul>
           <p class="place__paragraph">
@@ -201,17 +201,18 @@
         </article>
       </section>
       <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-        <div class="cover__overlay"></div>
+        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+        </a>
       </section>
       <footer class="footer">
         <ul class="footer__links">
-          <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-          <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-          <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-          <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-          <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+          <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+          <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+          <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+          <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">© 2020. Шнайдер Данила</p>
       </footer>
