--- a/index.html
+++ b/index.html
@@ -7,82 +7,78 @@
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-  <div class="page">
-    <div class="wrapper">
-      <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип карты России">
-        <ul class="header__lang-links">
-          <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
-          <li><a class="header__lang-link" href="#">En</a></li>
-        </ul>
-      </header>
+<body class="page">
+  <div class="wrapper">
+    <header class="header">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Логотип карты России">
+      <ul class="header__lang-links">
+        <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
+        <li><a class="header__lang-link" href="#">En</a></li>
+      </ul>
+    </header>
+    <main class="main">
       <section class="lead">
         <h1 class="lead__title">Путешествия по&nbsp;России</h1>
         <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта путешествия по России">
-        <p class="lead__caption">Ваша полка — верхняя</p>
+        <figure class="lead__figure">
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта путешествия по России">
+          <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
           но только 36% планируют провести отпуск в родной стране.
           Мол, чего мы тут, дома, не видели?
-          На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
+          На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+          Путорана.
           А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
           Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
           усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране.
           Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
         </p>
         <ul class="intro__list">
-          <li>
-            <h3 class="intro__list-heading">Часовых поясов</h3>
-            <p class="intro__list-text">11</p>
+          <li class="intro__list-item">Часовых поясов
+            <span class="intro__list-amount">11</span>
           </li>
-          <li>
-            <h3 class="intro__list-heading">Объектов природного наследия ЮНЕСКО</h3>
-            <p class="intro__list-text">12</p>
+          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО
+            <span class="intro__list-amount">12</span>
           </li>
-          <li>
-            <h3 class="intro__list-heading">Объектов культурного наследия ЮНЕСКО</h3>
-            <p class="intro__list-text">16</p>
+          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО
+            <span class="intro__list-amount">16</span>
           </li>
-          <li>
-            <h3 class="intro__list-heading">Природных заповедников</h3>
-            <p class="intro__list-text">105</p>
+          <li class="intro__list-item">Природных заповедников
+            <span class="intro__list-amount">105</span>
           </li>
-          <li>
-            <h3 class="intro__list-heading">Аэропортов</h3>
-            <p class="intro__list-text">241</p>
+          <li class="intro__list-item">Аэропортов
+            <span class="intro__list-amount">241</span>
           </li>
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
-        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атхарва-тулси">
-        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака в степи">
-        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Затуманенный лес в Сочи">
-        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Пляж Байкала">
-        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
-        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак на фоне буйков">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Гора на Камчатке">
-        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Гора рядом с Байкалом">
-        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Природный парк Эргаки">
+        <ul class="photo-grid__items">
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атхарва-тулси"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака в степи"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Затуманенный лес в Сочи"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Машина на льду"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Пляж Байкала"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак на фоне буйков"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Гора на Камчатке"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Гора рядом с Байкалом"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Природный парк Эргаки"></li>
+        </ul>
       </section>
       <section class="places">
         <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
-          <ul class="place__website">
-            <li>
-              <h3 class="place__url-heading">url</h3>
-            </li>
-            <li>
-              <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
-            </li>
-          </ul>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+          </div>
           <div class="place__paragraphs">
             <p class="place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива
@@ -100,14 +96,11 @@
         <article class="place">
           <h2 class="place__title">Кольский</h2>
           <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
-          <ul class="place__website">
-            <li>
-              <h3 class="place__url-heading">url</h3>
-            </li>
-            <li>
-              <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
-            </li>
-          </ul>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+            target="_blank">National Geographic</a>
+          </div>
           <div class="place__paragraphs">
             <p class="place__paragraph">
               Почти весь полуостров находится за Полярным кругом.
@@ -116,7 +109,8 @@
             <p class="place__paragraph">
               Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке.
               Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
-              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия.
+              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно
+              накрывает апатия.
               Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
             </p>
           </div>
@@ -124,19 +118,17 @@
         <article class="place">
           <h2 class="place__title">Алтай</h2>
           <img class="place__image" src="./images/place-altai.jpg" alt="Алтай и ноутбук">
-          <ul class="place__website">
-            <li>
-              <h3 class="place__url-heading">url</h3>
-            </li>
-            <li>
-              <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
-            </li>
-          </ul>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
+          </div>
           <div class="place__paragraphs">
             <p class="place__paragraph">
               Алтай — одно из красивейших мест в России.
-              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра.
-              А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
+              озёра.
+              А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+              воздухом.
             </p>
             <p class="place__paragraph">
               Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
@@ -149,14 +141,10 @@
         <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лед на зимнем Байкале">
-          <ul class="place__website">
-            <li>
-              <h3 class="place__url-heading">url</h3>
-            </li>
-            <li>
-              <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
-            </li>
-          </ul>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+          </div>
           <div class="place__paragraphs">
             <p class="place__paragraph">
               Всем известен Байкал как крупнейшее озеро в мире.
@@ -165,7 +153,8 @@
             <p class="place__paragraph">
               Конечно, это всё так.
               Но Байкал ещё идеальное место для соревнований по скийорингу.
-              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
+              Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно
+              бóльшую скорость на льду.
               В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
@@ -173,32 +162,35 @@
         <article class="place">
           <h2 class="place__title">Карелия</h2>
           <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
-          <ul class="place__website">
-            <li>
-              <h3 class="place__url-heading">url</h3>
-            </li>
-            <li>
-              <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
-            </li>
-          </ul>
-          <p class="place__paragraph">
-            Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера.
-            Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
-            Некоторым соснам уже больше чем полтысячелетия.
-            Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В девственном лесу на сотню километров не встретишь тропы.
-            А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями.
-            Чтобы все знали, кто тут хозяин.
-          </p>
+          <div class="place__website">
+            <h3 class="place__url-heading">url</h3>
+            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+          </div>
+          <div class="place__paragraphs">
+            <p class="place__paragraph">
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
+              Водлозера.
+              Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда
+              не знали топора.
+              Некоторым соснам уже больше чем полтысячелетия.
+              Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+              В девственном лесу на сотню километров не встретишь тропы.
+              А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями.
+              Чтобы все знали, кто тут хозяин.
+            </p>
+          </div>
         </article>
       </section>
       <section class="cover">
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
         </a>
       </section>
-      <footer class="footer">
+    </main>
+    <footer class="footer">
+      <nav class="footer__nav">
         <ul class="footer__links">
           <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
           <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
@@ -206,9 +198,9 @@
           <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
           <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
-        <p class="footer__copyright">© 2023. Шнайдер Данила</p>
-      </footer>
-    </div>
+      </nav>
+      <p class="footer__copyright">© 2023. Шнайдер Данила</p>
+    </footer>
   </div>
 </body>
 </html>
